Corrections to Meio.Autocomplete that were merged.

--- a/Demo/meio.autocomplete.css
+++ b/Demo/meio.autocomplete.css
@@ -20,11 +20,15 @@ license: MIT-style license
 	overflow-y: auto;
 	overflow-x: hidden;
 }
+
 .ma-container ul{
 	list-style: none;
 	overflow: hidden;
 	width: 100%;
+	margin: 0;
+	padding: 0;
 }
+
 .ma-container li{
 	padding: 2px 5px;
 	line-height: 16px;
@@ -33,18 +37,23 @@ license: MIT-style license
 	width: 100%;
 	overflow: hidden;
 }
+
 .ma-container .ma-hover{
 	color: #fff;
 	background-color: #921506 !important;
 }
+
 .ma-container .ma-odd{
 }
+
 .ma-container .ma-even{
 	background-color: #efefef;
 }
+
 .ma-loading{
 	background-color: #fafba4;
 }
+
 .ma-selected{
 	background-color: #ccfda8;
 }
